--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="../img/RA_logo.jpg" height="42" width="42"></a>
+                <a class="navbar-brand page-scroll" href="http://roamamore.com"><img src="../img/RA_logo.jpg" height="42" width="42"></a>
         
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="../img/RA-logo_transparen.png" height="42" width="132"></a>
+                <a class="navbar-brand page-scroll" href="http://roamamore.com"><img src="../img/RA-logo_transparen.png" height="42" width="132"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
