--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>801-747-1973</p>
+                    <p>801-747-9713</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
@@ -386,7 +386,16 @@
       }
     </script>
     <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBxwo9ZZr4xz5y3VPIwkSZUHjG9MjnxNSo&signed_in=true&libraries=places&callback=initAutocomplete', async='', defer=''></script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-74353188-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
     
 
 </body>
