--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                 	<!--<h2>Subscribe to our mailing list</h2>-->
                 <!--<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>-->
                 <div class="mc-field-group">
-                	<!--<label for="mce-EMAIL"> <span class="asterisk">*</span>-->
+                	<label for="mce-EMAIL"></span>
                 <!--</label>-->
-                	<input placeholder="Email Address (required)" type="email" value="" name="EMAIL" pattern="/^[a-zA-Z0-9+-_]+(\.[_a-zA-Z0-9+]+)*@[a-zA-Z0-9+-_]+(\.[a-zA-Z0-9+-_]+)*(\.[a-zA-Z]+)$/" class="form-control required email" id="mce-EMAIL">
+                	<input placeholder="Email Address (required)" type="email" name="EMAIL" pattern="/^[a-zA-Z0-9+-_]+(\.[_a-zA-Z0-9+]+)*@[a-zA-Z0-9+-_]+(\.[a-zA-Z0-9+-_]+)*(\.[a-zA-Z]+)$/" class="form-control required email" id="mce-EMAIL">
                 </div>
                 <div class="mc-field-group">
                 	<label for="mce-FNAME"> </label>
