--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
                 	<!--<h2>Subscribe to our mailing list</h2>-->
                 <!--<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>-->
                 <div class="mc-field-group">
-                	<label for="mce-EMAIL"></span>
-                <!--</label>-->
+                	<label for="mce-EMAIL"></label>
                 	<input placeholder="Email Address (required)" type="email" name="EMAIL" pattern="/^[a-zA-Z0-9+-_]+(\.[_a-zA-Z0-9+]+)*@[a-zA-Z0-9+-_]+(\.[a-zA-Z0-9+-_]+)*(\.[a-zA-Z]+)$/" class="form-control required email" id="mce-EMAIL">
                 </div>
                 <div class="mc-field-group">
