--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
                 <!--<div id="mc_embed_signup">-->
                 
                 <div class="col-xs-12 col-md-6 col-xs-offset-0 col-md-offset-3 floaty-horizontal--center floaty-unfloat-at--xs">
-                <form action="//roamamore.us12.list-manage.com/subscribe/post?u=02c2b1531854969e7643c4c43&amp;id=82b04c1d49" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-horizontal validate" target="_blank" novalidate="">
+                <form action="//roamamore.us12.list-manage.com/subscribe/post?u=02c2b1531854969e7643c4c43&amp;id=82b04c1d49" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-horizontal validate" novalidate="">
                     <!--<div id="mc_embed_signup_scroll">-->
                 	<!--<h2>Subscribe to our mailing list</h2>-->
                 <!--<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>-->
                 <div class="mc-field-group">
                 	<label for="mce-EMAIL"></label>
-                	<input placeholder="Email Address (required)" type="email" name="EMAIL" pattern="/^[a-zA-Z0-9+-_]+(\.[_a-zA-Z0-9+]+)*@[a-zA-Z0-9+-_]+(\.[a-zA-Z0-9+-_]+)*(\.[a-zA-Z]+)$/" class="form-control required email" id="mce-EMAIL">
+                	<input placeholder="Email Address (required)" type="email" name="EMAIL" value="" pattern="/^[a-zA-Z0-9+-_]+(\.[_a-zA-Z0-9+]+)*@[a-zA-Z0-9+-_]+(\.[a-zA-Z0-9+-_]+)*(\.[a-zA-Z]+)$/" class="form-control required email" id="mce-EMAIL">
                 </div>
                 <div class="mc-field-group">
                 	<label for="mce-FNAME"> </label>
